Update for new S model for URI values

--- a/config/module.ini
+++ b/config/module.ini
@@ -1,4 +1,5 @@
 name = "Rights Statements"
-version = "0.1.0"
+version = "0.1.1"
 author = "John Flatness"
 author_link = "https://github.com/zerocrates"
+omeka_version_constraint = ">=0.6.2-alpha"
