--- a/config/module.ini
+++ b/config/module.ini
@@ -1,8 +1,8 @@
 [info]
 name = "Rights Statements"
-version = "0.2.0"
+version = "0.3.0"
 author = "John Flatness"
 author_link = "https://github.com/zerocrates"
 module_link = "https://github.com/zerocrates/RightsStatements"
 support_link = "https://github.com/zerocrates/RightsStatements/issues"
-omeka_version_constraint = ">=1.0.0-beta3"
+omeka_version_constraint = "^1.0.0"
