--- a/config/module.ini
+++ b/config/module.ini
@@ -5,4 +5,4 @@ author = "John Flatness"
 author_link = "https://github.com/zerocrates"
 module_link = "https://github.com/zerocrates/RightsStatements"
 support_link = "https://github.com/zerocrates/RightsStatements/issues"
-omeka_version_constraint = "^1.0.0 || ^2.0.0"
+omeka_version_constraint = "^3.0.0"
